@@ -7,6 +7,10 @@ unreleased
 
 - fix --stop on windows.  Thanks to Christian Ullrich for the PR.
 
+- fix issue79: interoperate with pip-1.5 by interpreting accept
+  header as "*/*" as html_preferred.  Thanks Richard Jones.
+
+
 1.2.1
 ----------------
 
